# projet_experimental_anthony

./: .gitignore  .gitmodules  droid_slam_minimal_demo.py  pyproject.toml  requirements.txt  vo.py
BorealHDR/: parameters.yaml
BorealHDR/scripts/: emulator_threads.py
lightning_logs/version_0/: events.out.tfevents.1762461385.Aurora-R12.2897347.0
lightning_logs/version_1/: events.out.tfevents.1762461434.Aurora-R12.2898664.0
lightning_logs/version_10/: events.out.tfevents.1762462312.Aurora-R12.2916417.0
lightning_logs/version_11/: events.out.tfevents.1762462398.Aurora-R12.2918162.0
lightning_logs/version_12/: events.out.tfevents.1762462507.Aurora-R12.2920466.0
lightning_logs/version_13/: events.out.tfevents.1762462625.Aurora-R12.2922747.0
lightning_logs/version_14/: events.out.tfevents.1762462655.Aurora-R12.2923586.0
lightning_logs/version_15/: events.out.tfevents.1762462763.Aurora-R12.2925835.0
lightning_logs/version_16/: events.out.tfevents.1762462795.Aurora-R12.2926789.0
lightning_logs/version_17/: events.out.tfevents.1762462937.Aurora-R12.2929704.0
lightning_logs/version_18/: events.out.tfevents.1762462990.Aurora-R12.2930931.0
lightning_logs/version_19/: events.out.tfevents.1762463040.Aurora-R12.2932094.0
lightning_logs/version_2/: events.out.tfevents.1762461450.Aurora-R12.2899270.0
lightning_logs/version_20/: events.out.tfevents.1762463101.Aurora-R12.2933532.0
lightning_logs/version_21/: events.out.tfevents.1762463519.Aurora-R12.2940708.0
lightning_logs/version_22/: events.out.tfevents.1762464293.Aurora-R12.2951777.0
lightning_logs/version_23/: events.out.tfevents.1762464345.Aurora-R12.2952985.0
loftr/: loftr.py
loftr/backbone/: resnet_fpn.py
neural_network/: datamodules.py  datasets.py  geodesic_loss.py  networks.py  slam.py  train.py
scripts/: compress_images.py  generate_Perfect_AE_labels.py  utils.py
(+41 files in other folders)
