[project]
name = "projet-experimental-anthony"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "albumentations>=2.0.8",
    "antho-utils>=0.1.0",
    "kornia>=0.8.1",
    "kornia-moons>=0.2.9",
    "lightning>=2.5.5",
    "matplotlib>=3.10.7",
    "numpy>=2.3.3",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.3",
    "python-math>=0.0.1",
    "pyyaml>=6.0.3",
    "rasterio>=1.4.3",
    "rich>=14.2.0",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "wandb>=0.22.2",
]
