[project]
name = "projet-experimental-anthony"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "albumentations>=2.0.8",
    "boto3>=1.40.62",
    "colorama>=0.4.6",
    "droid-backends",
    "kornia>=0.8.1",
    "lietorch",
    "lightning>=2.5.5",
    "matplotlib>=3.10.7",
    "minio>=7.2.18",
    "moderngl>=5.12.0",
    "moderngl-window>=3.1.1",
    "numpy>=2.2.6",
    "open3d>=0.19.0",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.3",
    "python-math>=0.0.1",
    "pyyaml>=6.0.3",
    "rasterio>=1.4.3",
    "rich>=14.2.0",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "tensorboard>=2.20.0",
    "torch>=2.9.0",
    "torch-scatter",
    "torchvision>=0.24.0",
    "tqdm>=4.67.1",
    "wandb>=0.22.2",
]

[tool.uv.sources]
torch-scatter = { git = "https://github.com/rusty1s/pytorch_scatter.git", rev = "6cf77c4" }
lietorch = { git = "https://github.com/princeton-vl/lietorch.git", rev = "7f68764" }
droid-backends = { path = "DROID-SLAM", editable = true }
